Layout Shift fix

--- a/app/assets/scss/_modules/aos.scss
+++ b/app/assets/scss/_modules/aos.scss
@@ -249,16 +249,4 @@
         }
     }
     }
-
-    body:not(.aos-initialized) {
-        header & {
-            .header-container {
-                [data-aos] {
-                    opacity: 1;
-                    transform: none;   
-                    visibility: visible;
-                } 
-            }  
-        }
-    }
 }
